--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "dependencies": {
+    "@types/express": "^4.17.15",
+    "@types/node": "^18.11.17",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.3",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.17",
     "typescript": "^4.9.4"
   },
@@ -12,6 +19,8 @@
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
+    "start:dev": "nodemon server.ts NODE_ENV=development",
+    "start:prod": "NODE_ENV=production nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kiryl Savich",
