--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "dependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/express-session": "^1.17.5",
     "@types/morgan": "^1.9.3",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.17",
